# EBU6350_group4_mini_project

./: .gitignore  README.md
firmware/: platformio.ini
firmware/src/: main.cpp
simulation/ebu6350_simulation/: package.xml  setup.py
simulation/ebu6350_simulation/ebu6350_simulation/: controller_node.py
simulation/ebu6350_simulation/launch/: simulation.launch.py
simulation/ebu6350_simulation/urdf/: robot.urdf.xacro
