<?xml version="1.0"?>
<package format="3">
  <name>ebu6350_simulation</name>
  <version>1.0.0</version>
  <description>ROS2 Simulation for Group 4 Mini-Project</description>
  <maintainer email="tianyi@example.com">Tianyi Wang</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
